# nonebot-plugin-deepseek

./: .gitignore  LICENSE  README.md  pyproject.toml  tutorial.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup-python/: action.yml
.github/workflows/: release.yml
nonebot_plugin_deepseek/: __init__.py  compat.py  config.py  extension.py  hook.py  utils.py
nonebot_plugin_deepseek/apis/: request.py
nonebot_plugin_deepseek/cli/: __init__.py
nonebot_plugin_deepseek/cli/plugins/: tts.py
nonebot_plugin_deepseek/function_call/: registry.py
nonebot_plugin_deepseek/schemas/: __init__.py  balance.py  chat.py  logprobs.py  message.py  tts.py  usage.py
tests/: conftest.py  test_custom_model.py  test_extract.py
